; ModuleID = '/home/carl/AnghaBench/linux/fs/lockd/extr_clnt4xdr.c_nlm4_xdr_dec_res.c'
source_filename = "/home/carl/AnghaBench/linux/fs/lockd/extr_clnt4xdr.c_nlm4_xdr_dec_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_rqst = type { i32 }
%struct.xdr_stream = type { i32 }
%struct.nlm_res = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpc_rqst*, %struct.xdr_stream*, i8*)* @nlm4_xdr_dec_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nlm4_xdr_dec_res(%struct.rpc_rqst* %0, %struct.xdr_stream* %1, i8* %2) #0 {
  %4 = alloca %struct.rpc_rqst*, align 8
  %5 = alloca %struct.xdr_stream*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.nlm_res*, align 8
  %8 = alloca i32, align 4
  store %struct.rpc_rqst* %0, %struct.rpc_rqst** %4, align 8
  store %struct.xdr_stream* %1, %struct.xdr_stream** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.nlm_res*
  store %struct.nlm_res* %10, %struct.nlm_res** %7, align 8
  %11 = load %struct.xdr_stream*, %struct.xdr_stream** %5, align 8
  %12 = load %struct.nlm_res*, %struct.nlm_res** %7, align 8
  %13 = getelementptr inbounds %struct.nlm_res, %struct.nlm_res* %12, i32 0, i32 1
  %14 = call i32 @decode_cookie(%struct.xdr_stream* %11, i32* %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i64 @unlikely(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  br label %24

19:                                               ; preds = %3
  %20 = load %struct.xdr_stream*, %struct.xdr_stream** %5, align 8
  %21 = load %struct.nlm_res*, %struct.nlm_res** %7, align 8
  %22 = getelementptr inbounds %struct.nlm_res, %struct.nlm_res* %21, i32 0, i32 0
  %23 = call i32 @decode_nlm4_stat(%struct.xdr_stream* %20, i32* %22)
  store i32 %23, i32* %8, align 4
  br label %24

24:                                               ; preds = %19, %18
  %25 = load i32, i32* %8, align 4
  ret i32 %25
}

declare dso_local i32 @decode_cookie(%struct.xdr_stream*, i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @decode_nlm4_stat(%struct.xdr_stream*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
